@@ -1,3 +1,8 @@
+Fri Nov  5 15:42:06 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/Getter_T.cpp:
+          Removed usage of ACE_ERROR macro.
+
 Fri Nov  5 13:56:14 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/ConditionManager_T.h:
